# news-summary

./: .dockerignore  .env.ci  .env.docker  .env.local  .env.otel  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  .scpignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  env.sample  pyproject.toml  settings.py
.github/workflows/: ci.yml  deploy.yml  tests.yml
app/: error_handlers.py  exceptions.py  main.py  middleware_handlers.py  middlewares.py  tracer.py
app/models/: rss.py  user.py
app/routes/: rss.py  user.py
app/schemas/: rss.py  user.py
app/services/: auth.py  celery.py  database.py
app/utils/: db.py  limiter.py  log.py  validator.py
celery_app/: __init__.py  config.py  constants.py  llm.py  util.py
celery_app/tasks/: rss_crawler.py  rss_dispatcher.py
config/loki/: loki.yaml
config/nginx/: nginx.conf  nginx_initial.conf
config/nginx/conf.d/: crabtris.navydev.top.conf  http.conf  navydev.top.conf  obz.navydev.top.conf  rss.navydev.top.conf
config/otel/: otel.yaml
config/postgres/: postgresql.conf
config/prometheus/: prometheus.yaml
config/tempo/: tempo.yaml
docs/: 线上操作指南.md
notes/: certbot-https-证书.md  docker-compose安全清理.md  ollama-docker尝试.md  pg性能分析.md  pg数据迁移.md  pg版本升级.md  sentry-docker尝试.md  线上部署.md
scripts/: celery-and-api.sh  celery-run.sh  dev.sh  docker-cleanup.sh  docker-run.sh  docker-stop.sh  docker.sh  docker_overlay_usage.sh  entrypoint.sh  local-celery-start.sh  local-celery-stop.sh  local-otel-run.sh  local-run.sh  make-test.sh  otel-run.sh  renew_cert.sh  start-beat.sh  start-celery-beat.sh  start-celery-worker.sh  start-celery.sh  start-web.sh  start-worker.sh  stop-celery.sh  test.sh
tests/: conftest.py  helper.py  test_user.py  test_whoami.py
tests/celery_app/: conftest.py  test_rss_crawler.py  test_rss_crawler_fun.py
tests/data/articles/潮流周刊/: source.html  source.md
tests/data/articles/阮一峰的网络日志/: source.html  source.md  summary.md
tests/data/cassettes/: test_do_one_feed_logic.yaml  test_enhence_articles_case1.yaml  test_rss_subscribe_flow.yaml  test_validator.yaml
tests/data/feed/: atom.xml  rss.xml
tests/rss/: conftest.py  test_rss.py  test_utils_validator.py
tests/user/: conftest.py  test_user.py
